h1. Changelog

h2. Edge

* new features:
** support for websocket draft 76
** support for wss/SSL connections
** allow multiple socky servers
* bugfixes:
** none

h2. 0.0.7

* initial release